--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.18.0
   url_launcher: ^6.2.5
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
