--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   intl: ^0.18.0
   url_launcher: ^6.2.5
   pinput: ^3.0.1
+  image_picker: ^1.0.7
+  signature: ^5.4.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
